log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 09:52:43 PM UTC: 
 arraylist.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:18: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   15 |   void* arrayList->data = (ArrayList*) malloc(sizeof (ArrayList));
      |                  ^~
arraylist.c:15:18: error: expected expression before ‘->’ token
Compilation failed
3fb1987
Thu 30 Mar 2023 09:52:50 PM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
a2ae60c
Thu 30 Mar 2023 09:53:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
fbb3ba8
Thu 30 Mar 2023 09:53:56 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:17: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   15 |   int* arrayList->data = (int*) malloc(sizeof (int));
      |                 ^~
arraylist.c:15:17: error: expected expression before ‘->’ token
Compilation failed
33bb8e4
Thu 30 Mar 2023 09:54:05 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:14: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   15 |   int* arrayL->data = (int*) malloc(sizeof (int));
      |              ^~
arraylist.c:15:14: error: expected expression before ‘->’ token
Compilation failed
4a44dff
Thu 30 Mar 2023 09:56:35 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
277ce10
Thu 30 Mar 2023 09:56:42 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
22985ad
Thu 30 Mar 2023 09:56:53 PM UTC: 
 arraylist.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  1|5
total_score: 10/70
6dc5e74
Thu 30 Mar 2023 10:04:50 PM UTC: 
 arraylist.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
1b432d2
Thu 30 Mar 2023 10:11:27 PM UTC: 
 arraylist.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:39:26: error: ‘j’ undeclared (first use in this function)
   39 |     for(int k = l->size; j > i; j--)
      |                          ^
arraylist.c:39:26: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:39:13: error: unused variable ‘k’ [-Werror=unused-variable]
   39 |     for(int k = l->size; j > i; j--)
      |             ^
arraylist.c:42:15: error: ‘ArrayList’ {aka ‘struct ArrayList’} has no member named ‘i’
   42 |      l->data[l->i] = data;
      |               ^~
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:56:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   56 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
56d2c62
Thu 30 Mar 2023 10:11:56 PM UTC: 
 arraylist.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
test.c: In function ‘push’:
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:56:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   56 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3744411
Thu 30 Mar 2023 10:12:25 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  5|3
total_score: 30/70
aaf7aa2
Thu 30 Mar 2023 10:17:11 PM UTC: 
 arraylist.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  8|2
total_score: 40/70
d27b58a
Thu 30 Mar 2023 10:22:25 PM UTC: 
 arraylist.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
 tests:  11|1
total_score: 50/70
a497261
Thu 30 Mar 2023 10:24:26 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
bb57333
